--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 </head>
 <body>
     <div id="container">
-        <canvas width="400px" height="400px" id="canvas"></canvas>
+        <p id="text"></p>
+        <canvas width="1000px" height="500px" id="canvas"></canvas>
         <br>
         <div id="buttons">
             <button id="startButton">Start</button>
             <button onclick="location.reload()">Reset</button>
-            <!-- <input placeholder="Enter number" onkeypress="if(event.key === 'Enter') getRes(this.value)"> -->
         </div>
         
     </div>
