--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conway's game of life</title>
     <style>
-
         #container {
             display: flex;
             flex-direction: column;
             justify-content: center;  /* Horizontal centering */
             align-items: center;      /* Vertical centering */
             height: 100vh;
+            gap: 1rem;
         }
-
         #buttons {
             display: flex;
             gap: 2rem;
@@ -25,10 +24,12 @@
     <div id="container">
         <p id="text"></p>
         <canvas width="1000px" height="500px" id="canvas"></canvas>
-        <br>
         <div id="buttons">
             <button id="startButton">Start</button>
-            <button onclick="location.reload()">Reset</button>
+        </div>
+        <div id="resChangeDiv">
+            <input type="number" id="cellResolution" placeholder="Enter cell size" />
+            <button onclick="location.reload()">Update</button>
         </div>
     </div>
     <script src="main.js"></script>
